Bug 190445 - Adding an avatar crashes kopete
Summary: Adding an avatar crashes kopete
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.70.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 197063 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-23 16:41 UTC by Craig Magina
Modified: 2009-06-19 15:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Craig Magina 2009-04-23 16:41:43 UTC
Version:           0.70.2 (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

I was adding my .face file as my avatar and it crashed kopete.  I tried it twice and it crashed both times.  I am running Kubuntu 9.04 amd64 fully updated.

file .face:
    .face: JPEG image data, JFIF standard 1.01

Application: Kopete (kopete), signal SIGABRT
0x00007f7ffe02dd21 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (LWP 30880)]

Thread 2 (Thread 0x7f7fed727950 (LWP 30881)):
#0  0x00007f7ffbe5a2e9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f7fff9a6939 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007f8000d274cc in ?? () from /usr/lib/libQtNetwork.so.4
#3  0x00007f7fff9a5952 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f7ffbe563ba in start_thread () from /lib/libpthread.so.0
#5  0x00007f7ffe06bfcd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f8003805750 (LWP 30880)):
[KCrash Handler]
#5  0x00007f7ffdfb8fb5 in raise () from /lib/libc.so.6
#6  0x00007f7ffdfbabc3 in abort () from /lib/libc.so.6
#7  0x00007f7fff99d885 in qt_message_output () from /usr/lib/libQtCore.so.4
#8  0x00007f7fff99d9cb in qFatal () from /usr/lib/libQtCore.so.4
#9  0x00007f80024e1fb8 in Kopete::AvatarManager::add () from /usr/lib/libkopete.so.4
#10 0x00007f80024b8dee in Kopete::UI::AvatarSelectorWidget::buttonAddAvatarClicked () from /usr/lib/libkopete.so.4
#11 0x00007f80024b9078 in Kopete::UI::AvatarSelectorWidget::qt_metacall () from /usr/lib/libkopete.so.4
#12 0x00007f7fffaa41f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#13 0x00007f7fff2bd547 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#14 0x00007f7fff01b0cb in ?? () from /usr/lib/libQtGui.so.4
#15 0x00007f7fff01cd32 in ?? () from /usr/lib/libQtGui.so.4
#16 0x00007f7fff01cf85 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#17 0x00007f7ffecc997f in QWidget::event () from /usr/lib/libQtGui.so.4
#18 0x00007f7ffec7883d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#19 0x00007f7ffec8118a in QApplication::notify () from /usr/lib/libQtGui.so.4
#20 0x00007f800066926b in KApplication::notify () from /usr/lib/libkdeui.so.5
#21 0x00007f7fffa8e75c in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#22 0x00007f7ffec803d8 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#23 0x00007f7ffece9ec9 in ?? () from /usr/lib/libQtGui.so.4
#24 0x00007f7ffece8b38 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#25 0x00007f7ffed11514 in ?? () from /usr/lib/libQtGui.so.4
#26 0x00007f7ffa09e20a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#27 0x00007f7ffa0a18e0 in ?? () from /usr/lib/libglib-2.0.so.0
#28 0x00007f7ffa0a1a7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#29 0x00007f7fffab7e6f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#30 0x00007f7ffed10c9f in ?? () from /usr/lib/libQtGui.so.4
#31 0x00007f7fffa8d002 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#32 0x00007f7fffa8d3cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#33 0x00007f7fff1363ee in QDialog::exec () from /usr/lib/libQtGui.so.4
#34 0x00007f80024b6b02 in Kopete::UI::AvatarDialog::getAvatar () from /usr/lib/libkopete.so.4
#35 0x00007f8001e204e6 in IdentityDialog::slotSelectPhoto () from /usr/lib/libkopeteidentity.so.1
#36 0x00007f8001e20a48 in IdentityDialog::qt_metacall () from /usr/lib/libkopeteidentity.so.1
#37 0x00007f7fffaa41f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#38 0x00007f7fff2bd547 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#39 0x00007f7fff01b0cb in ?? () from /usr/lib/libQtGui.so.4
#40 0x00007f7fff01cd32 in ?? () from /usr/lib/libQtGui.so.4
#41 0x00007f7fff01cf85 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#42 0x00007f7fff0eeb0a in QToolButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#43 0x00007f7ffecc997f in QWidget::event () from /usr/lib/libQtGui.so.4
#44 0x00007f7ffec7883d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#45 0x00007f7ffec8118a in QApplication::notify () from /usr/lib/libQtGui.so.4
#46 0x00007f800066926b in KApplication::notify () from /usr/lib/libkdeui.so.5
#47 0x00007f7fffa8e75c in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#48 0x00007f7ffec803d8 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#49 0x00007f7ffece9ec9 in ?? () from /usr/lib/libQtGui.so.4
#50 0x00007f7ffece8b38 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#51 0x00007f7ffed11514 in ?? () from /usr/lib/libQtGui.so.4
#52 0x00007f7ffa09e20a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#53 0x00007f7ffa0a18e0 in ?? () from /usr/lib/libglib-2.0.so.0
#54 0x00007f7ffa0a1a7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#55 0x00007f7fffab7e6f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#56 0x00007f7ffed10c9f in ?? () from /usr/lib/libQtGui.so.4
#57 0x00007f7fffa8d002 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#58 0x00007f7fffa8d3cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#59 0x00007f7fff1363ee in QDialog::exec () from /usr/lib/libQtGui.so.4
#60 0x00007f7feb30479f in ?? () from /usr/lib/kde4/kcm_kopete_accountconfig.so
#61 0x00007f7feb3083e8 in ?? () from /usr/lib/kde4/kcm_kopete_accountconfig.so
#62 0x00007f7fffaa41f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#63 0x00007f7ffec72897 in QAction::triggered () from /usr/lib/libQtGui.so.4
#64 0x00007f7ffec73d10 in QAction::activate () from /usr/lib/libQtGui.so.4
#65 0x00007f7ffec76ad2 in QAction::qt_metacall () from /usr/lib/libQtGui.so.4
#66 0x00007f7ffecd2b85 in QWidgetAction::qt_metacall () from /usr/lib/libQtGui.so.4
#67 0x00007f8000598158 in KAction::qt_metacall () from /usr/lib/libkdeui.so.5
#68 0x00007f7fffaa41f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#69 0x00007f7fff2bd547 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#70 0x00007f7fff01b0cb in ?? () from /usr/lib/libQtGui.so.4
#71 0x00007f7fff01cd32 in ?? () from /usr/lib/libQtGui.so.4
#72 0x00007f7fff01cf85 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#73 0x00007f7ffecc997f in QWidget::event () from /usr/lib/libQtGui.so.4
#74 0x00007f7ffec7883d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#75 0x00007f7ffec8118a in QApplication::notify () from /usr/lib/libQtGui.so.4
#76 0x00007f800066926b in KApplication::notify () from /usr/lib/libkdeui.so.5
#77 0x00007f7fffa8e75c in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#78 0x00007f7ffec803d8 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#79 0x00007f7ffece9ec9 in ?? () from /usr/lib/libQtGui.so.4
#80 0x00007f7ffece8b38 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#81 0x00007f7ffed11514 in ?? () from /usr/lib/libQtGui.so.4
#82 0x00007f7ffa09e20a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#83 0x00007f7ffa0a18e0 in ?? () from /usr/lib/libglib-2.0.so.0
#84 0x00007f7ffa0a1a7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#85 0x00007f7fffab7e6f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#86 0x00007f7ffed10c9f in ?? () from /usr/lib/libQtGui.so.4
#87 0x00007f7fffa8d002 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#88 0x00007f7fffa8d3cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#89 0x00007f7fffa8f694 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#90 0x000000000044a8ec in _start ()
Comment 1 Roman Jarosz 2009-06-18 01:10:23 UTC
SVN commit 983319 by rjarosz:

Fix bug 190445: Adding an avatar crashes kopete

BUG: 190445



 M  +2 -1      avatarselectorwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=983319
Comment 2 Dario Andres 2009-06-19 15:13:06 UTC
*** Bug 197063 has been marked as a duplicate of this bug. ***