Fix bug 190445: Adding an avatar crashes kopete

BUG: 190445


svn path=/trunk/KDE/kdenetwork/kopete/; revision=983319